--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
             const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
-            const nominationCountText = nominationCount ? `<span style="color:#13ca5e;"><strong>【ご指名】</strong></span><br>・${nominationCount}` : '・ご指名が未選択です';
+            const secondanniversaryCountText = secondanniversaryCount ? `<span style="color:#13ca5e;"><strong>【ご指名】</strong></span><br>・${secondanniversaryCount}` : '・ご指名が未選択です';
 const selectedSymptomText = selectedSymptom.length > 0
     ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.map(item => `《${item.category}》${item.name}`).join('<br>・')}`
     : '・メニューが未選択です';
@@ -1135,8 +1135,8 @@ const selectedSymptomText = selectedSymptom.length > 0
         </div>
         <hr>
         <div class="info-row">
-            <p>${nominationCountText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstNomination')">修正する</button>
+            <p>${secondanniversaryCountText}</p>
+            <button class="edit-button" onclick="scrollToElement('firstsecondanniversary')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
