--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #008acb;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -606,7 +606,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #008acb;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -615,7 +615,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #008acb;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -1104,8 +1104,8 @@
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
-            const secondanniversaryCountText = secondanniversaryCount ? `<span style="color:#13ca5e;"><strong>【ご指名】</strong></span><br>・${secondanniversaryCount}` : '・ご指名が未選択です';
+            const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご指名】</strong></span><br>・${visitCount}` : '・ご指名が未選択です';
+            const secondanniversaryCountText = secondanniversaryCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${secondanniversaryCount}` : '・ご来店回数が未選択です';
 const selectedSymptomText = selectedSymptom.length > 0
     ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.map(item => `《${item.category}》${item.name}`).join('<br>・')}`
     : '・メニューが未選択です';
@@ -1141,7 +1141,7 @@ const selectedSymptomText = selectedSymptom.length > 0
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('mimitsubo'); scrollToElement('male'); scrollToElement('female'); scrollToElement('eyebrows'); scrollToElement('facial'); scrollToElement('body');">修正する</button>
+            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('malenew'); scrollToElement('female'); scrollToElement('femalenew'); scrollToElement('eyebrow'); scrollToElement('whiteningmale'); scrollToElement('whiteningfemale');">修正する</button>
         </div>
         <hr>
         <div class="info-row">
