--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         }
 
         button:hover {
-            background-color: #444;
+            background-color: #fafafa;
             transform: scale(1.05);
         }
 
@@ -717,7 +717,7 @@
     </div>
 
     <div class="container">
-        <h1>カットハウス・ベン<br>店長予約フォーム
+        <h1>カットハウス・ベン<br>福山予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -828,7 +828,7 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '初診': 20,
+            '1回目': 0,
             '2回目以降': 0
         };
 
@@ -1173,7 +1173,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n指名：店長\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n指名：店長\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【福山予約フォーム】\n指名：福山\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n指名：福山\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -1399,7 +1399,7 @@ const endLimit = 19 * 60;         // 18:00
                         });
 
                         // 同時に重なっている予約が3件以上ある場合は上限オーバーとする
-                        if (overlapping >= 4) {
+                        if (overlapping >= 2) {
                             overLimit = true; // 上限を超えたフラグを立てる
                             break; // これ以上チェックせずにループを抜ける
                         }
