--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #f7c11e;
+            background: #13ca5e;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #f7c11e, #bb8f0c);
+            background: linear-gradient(135deg, #13ca5e, #0fa958);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -140,7 +140,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -164,12 +164,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #f7c11e;
+            color: #13ca5e;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #f7c11e;
+            border: 2px solid #13ca5e;
         }
 
         input[type="text"],
@@ -296,7 +296,7 @@
         }
 
         .calendar td.selected {
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             color: #fff;
         }
 
@@ -516,7 +516,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -579,7 +579,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #f7c11e;
+            border-color: #13ca5e;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -588,7 +588,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -596,7 +596,7 @@
         }
 
         button:hover {
-            background-color: #fafafa;
+            background-color: #e9e9e9;
             transform: scale(1.05);
         }
 
@@ -604,11 +604,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #06c755;
+            background-color: #dc3545;
         }
 
         .submit-button:hover {
-            background-color: #06c755;
+            background-color: #c82333;
         }
 
         @media (max-width: 768px) {
@@ -657,7 +657,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #f7c11e;
+            background-color: #13ca5e;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -717,36 +717,20 @@
     </div>
 
     <div class="container">
-        <h1>カットハウス・ベン<br>福山予約フォーム
+        <h1>Anne.Logistics<br>予約フォーム
         </h1>
-        <div class="label">お客様名<span class="required">必須</span></div>
+        <div class="label">お名前<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">ご来店回数<span class="required">必須</span></div>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
-        </div>
-
-        <div class="label">メニューをお選びください</div>
-        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
+
+        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
+        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">カット(60分)</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">カラー(90分)</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">パーマ(90分)</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">トリートメント(90分)</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">頭皮ケア(30分)</button>
-        </div>
-        <div class="highlight-background">
-            <span class="highlight-text">オプション</span>
-        </div>
-        <div class="irradiations">
-            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ブリーチ(カラー選択の方のみ/60分)</button>
-            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ハイライト(カラー選択の方のみ/60分)</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">ZOOM面接</button>
         </div>
 
         <div class="label">希望日時<span class="required">必須</span></div>
@@ -793,7 +777,7 @@
             </div>
         </div>
 
-        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">ご予約内容</div>
@@ -828,7 +812,7 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目': 0,
+            '初診': 0,
             '2回目以降': 0
         };
 
@@ -836,18 +820,13 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            'ブリーチ(カラー選択の方のみ/60分)': 60,
-            'ハイライト(カラー選択の方のみ/60分)': 60
+            'ベーシックマッサージ(パック付き)〈30分〉': 0
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'カット(60分)': 60,
-            'カラー(90分)': 120,
-            'パーマ(90分)': 120,
-            'トリートメント(90分)': 120,
-            '頭皮ケア(30分)': 30
+            'ZOOM面接': 30
         };
 
 
@@ -888,7 +867,7 @@
             const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
 
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>・')}`
+                ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             const irradiationsText = irradiationsCount
@@ -917,12 +896,7 @@
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('whitening');">修正する</button>
-        </div>
-        <hr>
-        <div class="info-row">
-            <p>${irradiationsText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正する</button>
+            <button class="edit-button" onclick="scrollToElement('course')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
@@ -990,26 +964,23 @@
             // 選択されたオプションを取得
             const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
 
-            // メニュー時間と価格をリセット
-            selectedMenuTime = 0;
-            selectedSymptom = [];
-            menuPrice = 0;
-
             if (updatedSelectedButtons.length === 0) {
-                // すべてのボタンの選択が解除された場合
+                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
                 selectedMenuTime = 0;
                 selectedSymptom = null; // 選択されたメニューをリセット
                 menuPrice = 0; // メニュー価格をリセット
-                treatmentText.style.display = 'none';
-                return; // ここで処理を終了
             } else {
-                // 選択された各ボタンについて処理
-                updatedSelectedButtons.forEach((btn) => {
-                    const selectedMenu = btn.textContent;
-                    selectedMenuTime += menuTimes[selectedMenu] || 0; // 各メニューの時間を合計
-                    selectedSymptom.push(selectedMenu); // 選択されたメニューを配列に追加
-                    menuPrice += parseInt(btn.getAttribute('data-price'), 10) || 0; // 各メニューの価格を合計
-                });
+                // 1つだけ選択状態にする
+                if (updatedSelectedButtons.length > 1) {
+                    updatedSelectedButtons.forEach(btn => btn.classList.remove('active'));
+                    button.classList.add('active'); // クリックしたボタンだけを選択
+                }
+
+                // 選択されたメニューの時間を取得して保存
+                const selectedMenu = button.textContent;
+                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
+                selectedSymptom = [selectedMenu]; // 選択されたメニュー名を配列として保存
+                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
             }
 
             console.log('選択されたメニューの時間:', selectedMenuTime);
@@ -1173,7 +1144,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【福山予約フォーム】\n指名：福山\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n指名：福山\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -1238,16 +1209,18 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:30',
-                '10:00', '10:30',
-                '11:00', '11:30',
-                '12:00', '12:30',
-                '13:00', '13:30',
-                '14:00', '14:30',
-                '15:00', '15:30',
-                '16:00', '16:30',
-                '17:00', '17:30',
-                '18:00'
+                '09:00',
+                '10:00',
+                '11:00',
+                '12:00',
+                '13:00',
+                '14:00',
+                '15:00',
+                '16:00',
+                '17:00',
+                '18:00',
+                '19:00',
+                '20:00'
             ];
 
             if (table.rows.length === 0) {
@@ -1283,10 +1256,6 @@
             // 現在の日時を取得
             const now = new Date();
 
-            // ✖にする期限を設定：今日から10日後
-            const limitDate = new Date(now);
-            limitDate.setDate(now.getDate() + 10);
-
             // テーブルの内容を更新
             for (let i = 0; i < 7; i++) {
                 const day = new Date(currentDate);
@@ -1294,7 +1263,6 @@
 
                 let businessEventTimes = []; // 営業日のイベント時間帯を記録する配列
 
-                // availabilityの中から営業日イベントを抽出して格納
                 availability.forEach(slot => {
                     const eventStart = new Date(slot.startTime);
                     const eventEnd = new Date(slot.endTime);
@@ -1311,13 +1279,6 @@
                         continue;
                     }
 
-const dayOfWeek = day.getDay();  // 曜日を取得（0=日曜, 1=月曜, ..., 6=土曜）
-const nowHour = now.getHours();
-const nowMinute = now.getMinutes();
-const nowTime = nowHour * 60 + nowMinute;
-const startLimit = 9 * 60 + 30;   // 9:30
-const endLimit = 19 * 60;         // 18:00
-
                     const slotStart = new Date(day);
                     slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]), 0, 0);
 
@@ -1329,26 +1290,8 @@ const endLimit = 19 * 60;         // 18:00
                     // メニュー時間と訪問回数の時間を合計して、終了時間を設定
                     slotEnd.setMinutes(slotStart.getMinutes() + menuDuration + visitDuration + irradiationsDuration);
 
-                    // 👇 ここが追加した条件！
-                    if (slotStart >= limitDate) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    }
-
                     // 終了時間が翌日 (0時以降) になる場合は✕に設定
                     if (slotEnd.getDate() !== slotStart.getDate()) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    }
-
-                    // 18時以降に終了する予約を不可にする (17:30は可)
-                    if (slotEnd.getHours() === 19 && slotEnd.getMinutes() > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    } else if (slotEnd.getHours() > 19) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                         continue;
@@ -1362,78 +1305,55 @@ const endLimit = 19 * 60;         // 18:00
                         continue;
                     }
 
-                    // 指定時間帯が営業日内かを判定
                     const isBusinessDay = businessDays.some(businessDay => {
                         const businessDayStart = new Date(businessDay.start);
                         const businessDayEnd = new Date(businessDay.end);
                         return slotStart >= businessDayStart && slotEnd <= businessDayEnd;
                     });
 
-                    // 営業イベントと時間帯が重なっているかを判定
                     const isBusinessEventTime = businessEventTimes.some(event => {
                         return slotStart < event.end && event.start < slotEnd;
                     });
 
-                    let overLimit = false;
-
-                    const relevantEvents = availability.filter(slot => {
+                    const count = availability.reduce((acc, slot) => {
                         const eventStart = new Date(slot.startTime);
                         const eventEnd = new Date(slot.endTime);
-                        return slot.title !== "営業日" && eventStart < slotEnd && eventEnd > slotStart;
-                    });
 
-                    // 開始時刻から終了時刻まで、1分ずつずらしながらループ（重なりチェック用）
-                    for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 1)) {
-
-                        let overlapping = 1; // 仮予約（今チェック中の1件）を最初からカウントに含める
-
-                        // すべての関連イベント（同じ日や同じメニューなど）をチェック
-                        relevantEvents.forEach(slot => {
-                            const eventStart = new Date(slot.startTime); // イベントの開始時間を取得
-                            const eventEnd = new Date(slot.endTime);     // イベントの終了時間を取得
-
-                            // checkTime（今見ている1分）に、他のイベントがかぶっているかをチェック
-                            if (eventStart <= checkTime && eventEnd > checkTime) {
-                                overlapping++; // 重なっているイベントがあるのでカウントを1つ追加
-                            }
-                        });
-
-                        // 同時に重なっている予約が3件以上ある場合は上限オーバーとする
-                        if (overlapping >= 2) {
-                            overLimit = true; // 上限を超えたフラグを立てる
-                            break; // これ以上チェックせずにループを抜ける
+                        if (eventStart < slotEnd && slotStart < eventEnd && slot.title !== "営業日") {
+                            return acc + 1;
                         }
+                        return acc;
+                    }, 0);
+
+                    // 営業日のイベント時間内に他のイベントがある場合
+                    if (isBusinessEventTime && count > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
                     }
-
-                    // ⭐ 利用可否の最終判断（◯ or ✕）を決定するロジック
-                    if (isBusinessEventTime) {
-                        // 営業イベント中で上限オーバー → ✕／それ以外 → ◯
-                        if (overLimit) {
-                            cell.textContent = '✕';
-                            cell.classList.add('unavailable');
-                        } else {
-                            cell.textContent = '◯';
-                            cell.classList.add('available');
-                        }
-                    } else if (slotStart.getDay() === 1 && !isBusinessDay && businessEventTimes.length === 0) {
-                        // 月曜日で営業日でもない場合 → ✕
+                    // 営業日のイベント時間（他のイベントがない場合）
+                    else if (isBusinessEventTime) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    // 営業日で、指定されている時間以外の時間は×
+                    else if (businessEventTimes.length > 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
-                    } else if (businessEventTimes.length > 0) {
-                        // 当日に営業イベントがあるが、時間外 → ✕
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    } else if (!overLimit) {
-                        // 上限未満であれば営業日でなくても ◯
+                    }
+                    // 営業日でかつ他のイベントがない場合
+                    else if (isBusinessDay && count === 0) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    // それ以外の条件
+                    else if (count === 0) {
                         cell.textContent = '◯';
                         cell.classList.add('available');
                     } else {
-                        // その他（上限オーバー） → ✕
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
 
-                    // セルにこの時間帯のデータ属性を追加（ISO形式の日時）
                     cell.setAttribute('data-date', slotStart.toISOString());
                 }
             }
